Closed Bug 1398401 Opened 6 years ago Closed 6 years ago

Assertion failure: !slots->mCustomElementData (Custom element data may not be changed once set.), at dom/base/Element.cpp:4210

Categories

(Core :: DOM: Core & HTML, defect, P1)

57 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox-esr52 --- unaffected
firefox55 --- unaffected
firefox56 --- unaffected
firefox57 --- fixed

People

(Reporter: bc, Assigned: jdai)

References

()

Details

(Keywords: assertion, regression, regressionwindow-wanted)

Attachments

(2 files)

Attached file Windows assertion log
[Tracking Requested - why for this release]:

1. https://www.gcflearnfree.org/powerpoint2013/modifying-themes/1/

2. Assertion failure: !slots->mCustomElementData (Custom element data may not be changed once set.), at z:/build/build/src/dom/base/Element.cpp:4210

Windows/Linux Nightly 57 but not Beta 56 -> regression
Hi John, the assertion was added in bug 1347634, which was landed in 55, could you please check what has been done in 57 that caused this regression? Thank you.
Flags: needinfo?(jdai)
Priority: -- → P1
Assignee: nobody → jdai
Flags: needinfo?(jdai)
Attached patch patch, v1Splinter Review
The reason is we missed add a preference check when we're going to setup custom element v0[1]. This code will be changed to v1 version by bug 1378079. Hence, I add IsWebComponentsEnabled() which is a v0 preference check for this bug.

Try: https://treeherder.mozilla.org/#/jobs?repo=try&revision=203aeededc60a680725b8bc54bbcf1866b3ea0fd&filter-tier=1&group_state=expanded

[1] https://searchfox.org/mozilla-central/rev/51eae084534f522a502e4b808484cde8591cb502/parser/html/nsHtml5TreeOperation.cpp#447-450
Attachment #8906935 - Flags: review?(bugs)
Attachment #8906935 - Flags: review?(bugs) → review+
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/48448bff8f92
Add preference check for custom element setup. r=smaug
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/48448bff8f92
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Blocks: 1347634
Version: 57 Branch → 55 Branch
Blocks: 1375701
No longer blocks: 1347634
Version: 55 Branch → 57 Branch
You need to log in before you can comment on or make changes to this bug.