Bug 1398401 - Add preference check for custom element setup. r=smaug